--- a/音乐2.1
+++ b/音乐2.1
@@ -20,9 +20,9 @@ local function CreateFullUI()
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
 
-    -- ==================== 主容器美化（增强渐变效果） ====================
+    -- ==================== 主容器美化 ====================
     local mainFrame = Instance.new("Frame")
-    mainFrame.Size = UDim2.new(0, 300, 0, 200) -- 保持原有尺寸
+    mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
     mainFrame.BackgroundColor3 = Color3.fromRGB(35, 35, 45)
@@ -30,26 +30,26 @@ local function CreateFullUI()
     mainFrame.BorderSizePixel = 0
     mainFrame.Parent = screenGui
     
-    -- 增强渐变背景效果（更明显的45度角渐变）
+    -- 主容器渐变效果（独立，不影响内部元素）
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(45, 45, 60)),  -- 顶部较亮
-        ColorSequenceKeypoint.new(1, Color3.fromRGB(25, 25, 35))   -- 底部较暗
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(45, 45, 60)),
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(25, 25, 35))
     })
-    gradient.Rotation = 45  -- 45度角渐变，视觉效果更明显
+    gradient.Rotation = 45
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
     
-    -- 添加阴影效果
-    local uiStroke = Instance.new("UIStroke")
-    uiStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-    uiStroke.Color = Color3.fromRGB(0, 0, 0)
-    uiStroke.Transparency = 0.8
-    uiStroke.Thickness = 2
-    uiStroke.Parent = mainFrame
+    -- 主容器阴影（独立）
+    local mainStroke = Instance.new("UIStroke")
+    mainStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+    mainStroke.Color = Color3.fromRGB(0, 0, 0)
+    mainStroke.Transparency = 0.8
+    mainStroke.Thickness = 2
+    mainStroke.Parent = mainFrame
     
-    -- ==================== 标题栏美化（增强渐变） ====================
+    -- ==================== 标题栏美化 ====================
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, -20, 0, 30)
     titleBar.Position = UDim2.new(0, 10, 0, 5)
@@ -58,13 +58,13 @@ local function CreateFullUI()
     titleBar.BorderSizePixel = 0
     titleBar.Parent = mainFrame
     
-    -- 增强标题栏渐变效果（垂直渐变）
+    -- 标题栏渐变（独立）
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(70, 100, 220)),  -- 顶部亮蓝色
-        ColorSequenceKeypoint.new(1, Color3.fromRGB(50, 80, 180))    -- 底部深蓝色
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(70, 100, 220)),
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(60, 80, 160))
     })
-    titleGradient.Rotation = 90  -- 垂直渐变
+    titleGradient.Rotation = 90
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
@@ -72,7 +72,7 @@ local function CreateFullUI()
     local titleLabel = Instance.new("TextLabel")
     titleLabel.Size = UDim2.new(1, -80, 1, 0)
     titleLabel.Position = UDim2.new(0, 10, 0, 0)
-    titleLabel.Text = "MUSIC PLAYER ♪♪[made by余客]" -- 保持原有标题
+    titleLabel.Text = "MUSIC PLAYER ♪♪[made by余客]"
     titleLabel.TextColor3 = Color3.fromRGB(255, 255, 255)
     titleLabel.TextSize = 14
     titleLabel.Font = Enum.Font.GothamBold
@@ -80,7 +80,7 @@ local function CreateFullUI()
     titleLabel.BackgroundTransparency = 1
     titleLabel.Parent = titleBar
 
-    -- ==================== 控制按钮 ====================
+    -- ==================== 控制按钮（独立颜色系统） ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
     closeButton.Position = UDim2.new(1, -30, 0.5, -12.5)
@@ -89,7 +89,7 @@ local function CreateFullUI()
     closeButton.Font = Enum.Font.GothamBold
     closeButton.TextSize = 18
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
+    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80) -- 独立红色
     closeButton.BorderSizePixel = 0
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
@@ -106,12 +106,12 @@ local function CreateFullUI()
     twinButton.Font = Enum.Font.GothamBold
     twinButton.TextSize = 12
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
+    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180) -- 独立紫色
     twinButton.BorderSizePixel = 0
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
 
-    -- ==================== 输入框美化（添加渐变背景） ====================
+    -- ==================== 输入框美化（独立渐变系统） ====================
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
@@ -120,7 +120,7 @@ local function CreateFullUI()
         container.BorderSizePixel = 0
         container.Parent = mainFrame
         
-        -- 输入框渐变背景
+        -- 输入框独立渐变
         local inputGradient = Instance.new("UIGradient")
         inputGradient.Color = ColorSequence.new({
             ColorSequenceKeypoint.new(0, Color3.fromRGB(60, 60, 75)),
@@ -130,7 +130,7 @@ local function CreateFullUI()
         
         ApplyRoundedCorners(container, 6)
         
-        -- 添加输入框阴影
+        -- 输入框独立阴影
         local inputStroke = Instance.new("UIStroke")
         inputStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
         inputStroke.Color = Color3.fromRGB(0, 0, 0)
@@ -156,8 +156,8 @@ local function CreateFullUI()
     local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)
     local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)
 
-    -- ==================== 功能按钮美化（关键改进：播放按钮状态颜色） ====================
-    local function CreateStyledButton(text, posX, posY, sizeX, defaultColor)
+    -- ==================== 功能按钮美化（关键修复：独立的颜色系统） ====================
+    local function CreateStyledButton(text, posX, posY, sizeX, defaultColor, isPlayButton)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 32)
         btn.Position = UDim2.new(posX, 0, posY, 0)
@@ -170,7 +170,7 @@ local function CreateFullUI()
         btn.BorderSizePixel = 0
         btn.Parent = mainFrame
         
-        -- 按钮渐变效果
+        -- 按钮独立渐变（不与其他按钮共享）
         local btnGradient = Instance.new("UIGradient")
         btnGradient.Color = ColorSequence.new({
             ColorSequenceKeypoint.new(0, Color3.fromRGB(
@@ -180,12 +180,12 @@ local function CreateFullUI()
             )),
             ColorSequenceKeypoint.new(1, defaultColor)
         })
-        btnGradient.Rotation = 90  -- 垂直渐变
+        btnGradient.Rotation = 90
         btnGradient.Parent = btn
         
         ApplyRoundedCorners(btn, 8)
         
-        -- 按钮阴影
+        -- 按钮独立阴影
         local btnStroke = Instance.new("UIStroke")
         btnStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
         btnStroke.Color = Color3.fromRGB(0, 0, 0)
@@ -193,19 +193,25 @@ local function CreateFullUI()
         btnStroke.Thickness = 1
         btnStroke.Parent = btn
         
+        -- 仅为播放按钮添加状态标记
+        if isPlayButton then
+            btn:SetAttribute("IsPlayButton", true)
+        end
+        
         return btn
     end
 
-    -- ==================== 关键改进：播放按钮状态颜色系统 ====================
-    -- 播放按钮的默认颜色（Roblox官方蓝色）
-    local playButtonDefaultColor = Color3.fromRGB(0, 162, 255) -- Roblox品牌蓝色
-    local playButtonSuccessColor = Color3.fromRGB(70, 200, 100)   -- 成功：绿色
-    local playButtonFailureColor = Color3.fromRGB(220, 80, 80)     -- 失败：红色
+    -- ==================== 关键修复：播放按钮独立颜色系统 ====================
+    local playButtonDefaultColor = Color3.fromRGB(0, 162, 255) -- Roblox官方蓝色
+    local playButtonSuccessColor = Color3.fromRGB(70, 200, 100) -- 成功绿色
+    local playButtonFailureColor = Color3.fromRGB(220, 80, 80) -- 失败红色
     
-    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
-    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(150, 80, 80))
+    -- 创建播放按钮（标记为特殊按钮）
+    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor, true)
+    -- 停止按钮使用独立颜色
+    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(150, 80, 80), false)
 
-    -- ==================== 切换按钮美化 ====================
+    -- ==================== 切换按钮美化（独立颜色） ====================
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 24)
@@ -219,7 +225,7 @@ local function CreateFullUI()
         btn.BorderSizePixel = 0
         btn.Parent = mainFrame
         
-        -- 切换按钮渐变
+        -- 切换按钮独立渐变
         local toggleGradient = Instance.new("UIGradient")
         toggleGradient.Color = ColorSequence.new({
             ColorSequenceKeypoint.new(0, Color3.fromRGB(
@@ -233,7 +239,7 @@ local function CreateFullUI()
         
         ApplyRoundedCorners(btn, 6)
         
-        -- 切换按钮阴影
+        -- 切换按钮独立阴影
         local toggleStroke = Instance.new("UIStroke")
         toggleStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
         toggleStroke.Color = Color3.fromRGB(0, 0, 0)
@@ -247,7 +253,7 @@ local function CreateFullUI()
     local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    -- ==================== 添加分隔线 ====================
+    -- ==================== 分隔线 ====================
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
     separator.Position = UDim2.new(0, 10, 0.58, 0)
@@ -430,7 +436,7 @@ local function CreateFullUI()
         return Mode1_Play(musicID, volume, pitch, loopEnabled) or Mode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- ==================== 关键改进：播放按钮状态反馈系统 ====================
+    -- ==================== 关键修复：播放按钮独立状态反馈系统 ====================
     local function handlePlayback()
         local musicID = musicIDBox.Text:gsub("%D+", "")
         if not musicID:match("^%d+$") or #musicID < 6 then return end
@@ -447,20 +453,20 @@ local function CreateFullUI()
             success = AutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
-        -- 关键改进：播放按钮状态颜色反馈（闪动效果）
+        -- 关键修复：仅播放按钮改变颜色，不影响其他按钮
         if success then
-            -- 播放成功：闪动绿色
+            -- 播放成功：闪动绿色（仅影响播放按钮）
             local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
             local successTween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonSuccessColor})
             successTween:Play()
         else
-            -- 播放失败：闪动红色
+            -- 播放失败：闪动红色（仅影响播放按钮）
             local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
             local failureTween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonFailureColor})
             failureTween:Play()
         end
         
-        -- 1秒后恢复默认的Roblox蓝色
+        -- 1秒后仅恢复播放按钮的颜色
         task.delay(1.0, function()
             local tweenInfo = TweenInfo.new(0.5, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
             local restoreTween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonDefaultColor})
@@ -470,6 +476,7 @@ local function CreateFullUI()
 
     local function handleStop()
         StopAllSounds()
+        -- 停止按钮的颜色变化独立于播放按钮
         stopButton.BackgroundColor3 = Color3.fromRGB(200, 100, 100)
         task.delay(0.5, function()
             local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
@@ -491,4 +498,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("🎵 音乐播放器UI已加载 - 渐变效果与状态反馈系统优化完成！")
+print("🎵 音乐播放器UI已加载 - 按钮颜色污染问题已彻底修复！")
