--- a/音乐2.1
+++ b/音乐2.1
@@ -13,6 +13,17 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
+-- 添加阴影效果函数
+local function ApplyShadowEffect(uiElement)
+    local uiStroke = Instance.new("UIStroke")
+    uiStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+    uiStroke.Color = Color3.fromRGB(0, 0, 0)
+    uiStroke.Transparency = 0.8
+    uiStroke.Thickness = 2
+    uiStroke.Parent = uiElement
+    return uiStroke
+end
+
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
     screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
@@ -30,24 +41,17 @@ local function CreateFullUI()
     mainFrame.BorderSizePixel = 0
     mainFrame.Parent = screenGui
     
-    -- 主容器渐变效果（独立，不影响内部元素）
+    -- 添加渐变背景效果
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(45, 45, 60)),
-        ColorSequenceKeypoint.new(1, Color3.fromRGB(25, 25, 35))
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(40, 40, 50)),
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(30, 30, 40))
     })
     gradient.Rotation = 45
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
-    
-    -- 主容器阴影（独立）
-    local mainStroke = Instance.new("UIStroke")
-    mainStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-    mainStroke.Color = Color3.fromRGB(0, 0, 0)
-    mainStroke.Transparency = 0.8
-    mainStroke.Thickness = 2
-    mainStroke.Parent = mainFrame
+    ApplyShadowEffect(mainFrame)
     
     -- ==================== 标题栏美化 ====================
     local titleBar = Instance.new("Frame")
@@ -58,13 +62,12 @@ local function CreateFullUI()
     titleBar.BorderSizePixel = 0
     titleBar.Parent = mainFrame
     
-    -- 标题栏渐变（独立）
+    -- 标题栏渐变
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(70, 100, 220)),
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(70, 100, 180)),
         ColorSequenceKeypoint.new(1, Color3.fromRGB(60, 80, 160))
     })
-    titleGradient.Rotation = 90
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
@@ -72,7 +75,7 @@ local function CreateFullUI()
     local titleLabel = Instance.new("TextLabel")
     titleLabel.Size = UDim2.new(1, -80, 1, 0)
     titleLabel.Position = UDim2.new(0, 10, 0, 0)
-    titleLabel.Text = "MUSIC PLAYER ♪[made by余客]"
+    titleLabel.Text = "MUSIC PLAYER ♪♪[made by余客]"
     titleLabel.TextColor3 = Color3.fromRGB(255, 255, 255)
     titleLabel.TextSize = 14
     titleLabel.Font = Enum.Font.GothamBold
@@ -80,7 +83,7 @@ local function CreateFullUI()
     titleLabel.BackgroundTransparency = 1
     titleLabel.Parent = titleBar
 
-    -- ==================== 控制按钮（独立颜色系统） ====================
+    -- ==================== 控制按钮美化 ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
     closeButton.Position = UDim2.new(1, -30, 0.5, -12.5)
@@ -89,7 +92,7 @@ local function CreateFullUI()
     closeButton.Font = Enum.Font.GothamBold
     closeButton.TextSize = 18
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80) -- 独立红色
+    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
     closeButton.BorderSizePixel = 0
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
@@ -106,37 +109,21 @@ local function CreateFullUI()
     twinButton.Font = Enum.Font.GothamBold
     twinButton.TextSize = 12
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180) -- 独立紫色
+    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
     twinButton.BorderSizePixel = 0
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
 
-    -- ==================== 输入框美化（独立渐变系统） ====================
-    local function CreateInputBox(posY, placeholder, sizeX, posX)
+    -- ==================== 输入框美化 ====================
+    local function CreateStyledInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
         container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
         container.BorderSizePixel = 0
         container.Parent = mainFrame
-        
-        -- 输入框独立渐变
-        local inputGradient = Instance.new("UIGradient")
-        inputGradient.Color = ColorSequence.new({
-            ColorSequenceKeypoint.new(0, Color3.fromRGB(60, 60, 75)),
-            ColorSequenceKeypoint.new(1, Color3.fromRGB(45, 45, 60))
-        })
-        inputGradient.Parent = container
-        
         ApplyRoundedCorners(container, 6)
-        
-        -- 输入框独立阴影
-        local inputStroke = Instance.new("UIStroke")
-        inputStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        inputStroke.Color = Color3.fromRGB(0, 0, 0)
-        inputStroke.Transparency = 0.8
-        inputStroke.Thickness = 1
-        inputStroke.Parent = container
+        ApplyShadowEffect(container)
         
         local box = Instance.new("TextBox")
         box.Size = UDim2.new(1, -10, 1, -6)
@@ -152,12 +139,12 @@ local function CreateFullUI()
         return box
     end
 
-    local musicIDBox = CreateInputBox(0.2, "输入音乐ID...", 0.9, 0.05)
-    local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)
-    local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)
+    local musicIDBox = CreateStyledInputBox(0.18, "输入音乐ID...", 0.9, 0.05)
+    local volumeBox = CreateStyledInputBox(0.38, "音量 0.1-100", 0.4, 0.05)
+    local pitchBox = CreateStyledInputBox(0.38, "音调 0.1-100", 0.4, 0.55)
 
-    -- ==================== 功能按钮美化（关键修复：独立的颜色系统） ====================
-    local function CreateStyledButton(text, posX, posY, sizeX, defaultColor, isPlayButton)
+    -- ==================== 功能按钮美化 ====================
+    local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 32)
         btn.Position = UDim2.new(posX, 0, posY, 0)
@@ -165,53 +152,42 @@ local function CreateFullUI()
         btn.Font = Enum.Font.GothamSemibold
         btn.TextSize = 13
         btn.TextColor3 = Color3.fromRGB(255, 255, 255)
-        btn.BackgroundColor3 = defaultColor
+        btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
         btn.Parent = mainFrame
         
-        -- 按钮独立渐变（不与其他按钮共享）
-        local btnGradient = Instance.new("UIGradient")
-        btnGradient.Color = ColorSequence.new({
-            ColorSequenceKeypoint.new(0, Color3.fromRGB(
-                math.min(defaultColor.R * 255 + 15, 255),
-                math.min(defaultColor.G * 255 + 15, 255),
-                math.min(defaultColor.B * 255 + 15, 255)
-            )),
-            ColorSequenceKeypoint.new(1, defaultColor)
-        })
-        btnGradient.Rotation = 90
-        btnGradient.Parent = btn
+        -- 按钮悬停效果
+        btn.MouseEnter:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = Color3.fromRGB(
+                math.min(color.R * 255 + 15, 255),
+                math.min(color.G * 255 + 15, 255),
+                math.min(color.B * 255 + 15, 255)
+            )})
+            tween:Play()
+        end)
+        
+        btn.MouseLeave:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = color})
+            tween:Play()
+        end)
         
         ApplyRoundedCorners(btn, 8)
-        
-        -- 按钮独立阴影
-        local btnStroke = Instance.new("UIStroke")
-        btnStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        btnStroke.Color = Color3.fromRGB(0, 0, 0)
-        btnStroke.Transparency = 0.8
-        btnStroke.Thickness = 1
-        btnStroke.Parent = btn
-        
-        -- 仅为播放按钮添加状态标记
-        if isPlayButton then
-            btn:SetAttribute("IsPlayButton", true)
-        end
-        
+        ApplyShadowEffect(btn)
         return btn
     end
 
-    -- ==================== 关键修复：播放按钮独立颜色系统 ====================
+    -- ==================== 关键修改：播放按钮颜色改为Roblox官方蓝色 ====================
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255) -- Roblox官方蓝色
-    local playButtonSuccessColor = Color3.fromRGB(70, 200, 100) -- 成功绿色
-    local playButtonFailureColor = Color3.fromRGB(220, 80, 80) -- 失败红色
+    local playButtonSuccessColor = Color3.fromRGB(70, 200, 100) -- 成功时的绿色
+    local playButtonFailureColor = Color3.fromRGB(220, 80, 80) -- 失败时的红色
     
-    -- 创建播放按钮（标记为特殊按钮）
-    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor, true)
-    -- 停止按钮使用独立颜色
-    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(150, 80, 80), false)
+    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
+    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- ==================== 切换按钮美化（独立颜色） ====================
+    -- ==================== 切换按钮美化 ====================
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 24)
@@ -225,35 +201,15 @@ local function CreateFullUI()
         btn.BorderSizePixel = 0
         btn.Parent = mainFrame
         
-        -- 切换按钮独立渐变
-        local toggleGradient = Instance.new("UIGradient")
-        toggleGradient.Color = ColorSequence.new({
-            ColorSequenceKeypoint.new(0, Color3.fromRGB(
-                math.min(color.R * 255 + 10, 255),
-                math.min(color.G * 255 + 10, 255),
-                math.min(color.B * 255 + 10, 255)
-            )),
-            ColorSequenceKeypoint.new(1, color)
-        })
-        toggleGradient.Parent = btn
-        
         ApplyRoundedCorners(btn, 6)
-        
-        -- 切换按钮独立阴影
-        local toggleStroke = Instance.new("UIStroke")
-        toggleStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        toggleStroke.Color = Color3.fromRGB(0, 0, 0)
-        toggleStroke.Transparency = 0.8
-        toggleStroke.Thickness = 1
-        toggleStroke.Parent = btn
-        
+        ApplyShadowEffect(btn)
         return btn
     end
 
     local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    -- ==================== 分隔线 ====================
+    -- ==================== 添加分隔线 ====================
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
     separator.Position = UDim2.new(0, 10, 0.58, 0)
@@ -436,7 +392,7 @@ local function CreateFullUI()
         return Mode1_Play(musicID, volume, pitch, loopEnabled) or Mode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- ==================== 关键修复：播放按钮独立状态反馈系统 ====================
+    -- ==================== 关键修改：播放按钮状态反馈系统 ====================
     local function handlePlayback()
         local musicID = musicIDBox.Text:gsub("%D+", "")
         if not musicID:match("^%d+$") or #musicID < 6 then return end
@@ -453,34 +409,29 @@ local function CreateFullUI()
             success = AutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
-        -- 关键修复：仅播放按钮改变颜色，不影响其他按钮
+        -- 关键修改：播放按钮状态颜色反馈
         if success then
-            -- 播放成功：闪动绿色（仅影响播放按钮）
-            local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-            local successTween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonSuccessColor})
-            successTween:Play()
+            -- 播放成功：闪动绿色
+            playButton.BackgroundColor3 = playButtonSuccessColor
         else
-            -- 播放失败：闪动红色（仅影响播放按钮）
-            local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-            local failureTween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonFailureColor})
-            failureTween:Play()
+            -- 播放失败：闪动红色
+            playButton.BackgroundColor3 = playButtonFailureColor
         end
         
-        -- 1秒后仅恢复播放按钮的颜色
-        task.delay(1.0, function()
-            local tweenInfo = TweenInfo.new(0.5, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-            local restoreTween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonDefaultColor})
-            restoreTween:Play()
+        -- 0.5秒后恢复为Roblox官方蓝色
+        task.delay(0.5, function()
+            local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonDefaultColor})
+            tween:Play()
         end)
     end
 
     local function handleStop()
         StopAllSounds()
-        -- 停止按钮的颜色变化独立于播放按钮
-        stopButton.BackgroundColor3 = Color3.fromRGB(200, 100, 100)
+        stopButton.BackgroundColor3 = Color3.fromRGB(250, 100, 100)
         task.delay(0.5, function()
             local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-            local tween = tweenService:Create(stopButton, tweenInfo, {BackgroundColor3 = Color3.fromRGB(150, 80, 80)})
+            local tween = tweenService:Create(stopButton, tweenInfo, {BackgroundColor3 = Color3.fromRGB(220, 80, 80)})
             tween:Play()
         end)
     end
@@ -498,4 +449,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("🎵 音乐播放器UI已加载 - 按钮颜色污染问题已彻底修复！")
+print("🎵 音乐播放器UI已加载 - 播放按钮已改为Roblox官方蓝色，状态反馈系统优化完成！")
