--- a/音乐2.1
+++ b/音乐2.1
@@ -13,17 +13,6 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
--- 添加阴影效果函数
-local function ApplyShadowEffect(uiElement)
-    local uiStroke = Instance.new("UIStroke")
-    uiStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-    uiStroke.Color = Color3.fromRGB(0, 0, 0)
-    uiStroke.Transparency = 0.8
-    uiStroke.Thickness = 2
-    uiStroke.Parent = uiElement
-    return uiStroke
-end
-
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
     screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
@@ -31,43 +20,51 @@ local function CreateFullUI()
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
 
-    -- ==================== 主容器美化 ====================
+    -- ==================== 主容器美化 - 关键修复：确保渐变效果 ====================
     local mainFrame = Instance.new("Frame")
     mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
-    mainFrame.BackgroundColor3 = Color3.fromRGB(35, 35, 45)
+    mainFrame.BackgroundColor3 = Color3.fromRGB(40, 40, 50) -- 中等深灰色，避免纯黑
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
     mainFrame.Parent = screenGui
     
-    -- 添加渐变背景效果
+    -- 关键修复：增强主容器渐变效果，避免纯黑背景
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(40, 40, 50)),
-        ColorSequenceKeypoint.new(1, Color3.fromRGB(30, 30, 40))
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(50, 50, 60)),  -- 较亮的顶部
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(30, 30, 40))   -- 稍暗的底部
     })
-    gradient.Rotation = 45
+    gradient.Rotation = 45  -- 保持45度角渐变
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
-    ApplyShadowEffect(mainFrame)
     
-    -- ==================== 标题栏美化 ====================
+    -- 添加细微阴影
+    local uiStroke = Instance.new("UIStroke")
+    uiStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+    uiStroke.Color = Color3.fromRGB(0, 0, 0)
+    uiStroke.Transparency = 0.8
+    uiStroke.Thickness = 2
+    uiStroke.Parent = mainFrame
+
+    -- ==================== 标题栏美化 - 关键改进：增强渐变对比度 ====================
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, -20, 0, 30)
     titleBar.Position = UDim2.new(0, 10, 0, 5)
-    titleBar.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
+    titleBar.BackgroundColor3 = Color3.fromRGB(60, 60, 80) -- 基础背景色
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
     titleBar.Parent = mainFrame
     
-    -- 标题栏渐变
+    -- 关键改进：增强标题栏渐变对比度（保持垂直方向但增加明度差异）
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(70, 100, 180)),
-        ColorSequenceKeypoint.new(1, Color3.fromRGB(60, 80, 160))
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(90, 120, 200)),  -- 明显较亮的蓝色
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(70, 90, 160))    -- 适度较暗的蓝色
     })
+    titleGradient.Rotation = 90  -- 保持垂直渐变方向
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
@@ -83,7 +80,7 @@ local function CreateFullUI()
     titleLabel.BackgroundTransparency = 1
     titleLabel.Parent = titleBar
 
-    -- ==================== 控制按钮美化 ====================
+    -- ==================== 控制按钮 ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
     closeButton.Position = UDim2.new(1, -30, 0.5, -12.5)
@@ -115,15 +112,31 @@ local function CreateFullUI()
     ApplyRoundedCorners(twinButton, 6)
 
     -- ==================== 输入框美化 ====================
-    local function CreateStyledInputBox(posY, placeholder, sizeX, posX)
+    local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
-        container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
+        container.BackgroundColor3 = Color3.fromRGB(55, 55, 70) -- 适中的背景色
         container.BorderSizePixel = 0
         container.Parent = mainFrame
+        
+        -- 输入框渐变背景
+        local inputGradient = Instance.new("UIGradient")
+        inputGradient.Color = ColorSequence.new({
+            ColorSequenceKeypoint.new(0, Color3.fromRGB(65, 65, 85)),
+            ColorSequenceKeypoint.new(1, Color3.fromRGB(50, 50, 65))
+        })
+        inputGradient.Parent = container
+        
         ApplyRoundedCorners(container, 6)
-        ApplyShadowEffect(container)
+        
+        -- 输入框阴影
+        local inputStroke = Instance.new("UIStroke")
+        inputStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+        inputStroke.Color = Color3.fromRGB(0, 0, 0)
+        inputStroke.Transparency = 0.8
+        inputStroke.Thickness = 1
+        inputStroke.Parent = container
         
         local box = Instance.new("TextBox")
         box.Size = UDim2.new(1, -10, 1, -6)
@@ -139,12 +152,12 @@ local function CreateFullUI()
         return box
     end
 
-    local musicIDBox = CreateStyledInputBox(0.18, "输入音乐ID...", 0.9, 0.05)
-    local volumeBox = CreateStyledInputBox(0.38, "音量 0.1-100", 0.4, 0.05)
-    local pitchBox = CreateStyledInputBox(0.38, "音调 0.1-100", 0.4, 0.55)
+    local musicIDBox = CreateInputBox(0.18, "输入音乐ID...", 0.9, 0.05)
+    local volumeBox = CreateInputBox(0.38, "音量 0.1-100", 0.4, 0.05)
+    local pitchBox = CreateInputBox(0.38, "音调 0.1-100", 0.4, 0.55)
 
     -- ==================== 功能按钮美化 ====================
-    local function CreateStyledButton(text, posX, posY, sizeX, color)
+    local function CreateButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 32)
         btn.Position = UDim2.new(posX, 0, posY, 0)
@@ -175,17 +188,25 @@ local function CreateFullUI()
         end)
         
         ApplyRoundedCorners(btn, 8)
-        ApplyShadowEffect(btn)
+        
+        -- 按钮阴影
+        local btnStroke = Instance.new("UIStroke")
+        btnStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+        btnStroke.Color = Color3.fromRGB(0, 0, 0)
+        btnStroke.Transparency = 0.8
+        btnStroke.Thickness = 1
+        btnStroke.Parent = btn
+        
         return btn
     end
 
-    -- ==================== 关键修改：播放按钮颜色改为Roblox官方蓝色 ====================
+    -- 播放按钮颜色定义
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255) -- Roblox官方蓝色
-    local playButtonSuccessColor = Color3.fromRGB(70, 200, 100) -- 成功时的绿色
-    local playButtonFailureColor = Color3.fromRGB(220, 80, 80) -- 失败时的红色
+    local playButtonSuccessColor = Color3.fromRGB(70, 200, 100) -- 成功绿色
+    local playButtonFailureColor = Color3.fromRGB(220, 80, 80) -- 失败红色
     
-    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
-    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
+    local playButton = CreateButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
+    local stopButton = CreateButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
 
     -- ==================== 切换按钮美化 ====================
     local function CreateToggleButton(text, posX, posY, sizeX, color)
@@ -202,7 +223,15 @@ local function CreateFullUI()
         btn.Parent = mainFrame
         
         ApplyRoundedCorners(btn, 6)
-        ApplyShadowEffect(btn)
+        
+        -- 切换按钮阴影
+        local toggleStroke = Instance.new("UIStroke")
+        toggleStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+        toggleStroke.Color = Color3.fromRGB(0, 0, 0)
+        toggleStroke.Transparency = 0.8
+        toggleStroke.Thickness = 1
+        toggleStroke.Parent = btn
+        
         return btn
     end
 
@@ -392,7 +421,7 @@ local function CreateFullUI()
         return Mode1_Play(musicID, volume, pitch, loopEnabled) or Mode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- ==================== 关键修改：播放按钮状态反馈系统 ====================
+    -- ==================== 播放按钮状态反馈系统 ====================
     local function handlePlayback()
         local musicID = musicIDBox.Text:gsub("%D+", "")
         if not musicID:match("^%d+$") or #musicID < 6 then return end
@@ -409,16 +438,14 @@ local function CreateFullUI()
             success = AutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
-        -- 关键修改：播放按钮状态颜色反馈
+        -- 播放按钮状态颜色反馈
         if success then
-            -- 播放成功：闪动绿色
             playButton.BackgroundColor3 = playButtonSuccessColor
         else
-            -- 播放失败：闪动红色
             playButton.BackgroundColor3 = playButtonFailureColor
         end
         
-        -- 0.5秒后恢复为Roblox官方蓝色
+        -- 0.5秒后恢复默认颜色
         task.delay(0.5, function()
             local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
             local tween = tweenService:Create(playButton, tweenInfo, {BackgroundColor3 = playButtonDefaultColor})
@@ -449,4 +476,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("🎵 音乐播放器UI已加载 - 播放按钮已改为Roblox官方蓝色，状态反馈系统优化完成！")
+print("🎵 音乐播放器UI已加载 - 颜色对比度与渐变效果优化完成！")
