--- a/音乐2.1
+++ b/音乐2.1
@@ -20,23 +20,23 @@ local function CreateFullUI()
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
 
-    -- ==================== 主容器美化 - 关键修复：确保渐变效果 ====================
+    -- ==================== 主容器美化 - 关键改进：提高整体背景亮度 ====================
     local mainFrame = Instance.new("Frame")
     mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
-    mainFrame.BackgroundColor3 = Color3.fromRGB(40, 40, 50) -- 中等深灰色，避免纯黑
+    mainFrame.BackgroundColor3 = Color3.fromRGB(45, 45, 55) -- 提高整体背景亮度
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
     mainFrame.Parent = screenGui
     
-    -- 关键修复：增强主容器渐变效果，避免纯黑背景
+    -- 关键改进：增强主容器渐变效果，提高对比度
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(50, 50, 60)),  -- 较亮的顶部
-        ColorSequenceKeypoint.new(1, Color3.fromRGB(30, 30, 40))   -- 稍暗的底部
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(55, 55, 65)),  -- 明显提高顶部亮度
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(35, 35, 45))   -- 适度提高底部亮度
     })
-    gradient.Rotation = 45  -- 保持45度角渐变
+    gradient.Rotation = 45
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
@@ -49,22 +49,22 @@ local function CreateFullUI()
     uiStroke.Thickness = 2
     uiStroke.Parent = mainFrame
 
-    -- ==================== 标题栏美化 - 关键改进：增强渐变对比度 ====================
+    -- ==================== 标题栏美化 ====================
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, -20, 0, 30)
     titleBar.Position = UDim2.new(0, 10, 0, 5)
-    titleBar.BackgroundColor3 = Color3.fromRGB(60, 60, 80) -- 基础背景色
+    titleBar.BackgroundColor3 = Color3.fromRGB(60, 60, 75) -- 提高标题栏亮度
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
     titleBar.Parent = mainFrame
     
-    -- 关键改进：增强标题栏渐变对比度（保持垂直方向但增加明度差异）
+    -- 标题栏渐变
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
-        ColorSequenceKeypoint.new(0, Color3.fromRGB(90, 120, 200)),  -- 明显较亮的蓝色
-        ColorSequenceKeypoint.new(1, Color3.fromRGB(70, 90, 160))    -- 适度较暗的蓝色
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(90, 120, 200)),
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(70, 90, 160))
     })
-    titleGradient.Rotation = 90  -- 保持垂直渐变方向
+    titleGradient.Rotation = 90
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
@@ -111,20 +111,20 @@ local function CreateFullUI()
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
 
-    -- ==================== 输入框美化 ====================
+    -- ==================== 输入框美化 - 关键改进：提高输入框背景亮度 ====================
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
-        container.BackgroundColor3 = Color3.fromRGB(55, 55, 70) -- 适中的背景色
+        container.BackgroundColor3 = Color3.fromRGB(65, 65, 80) -- 明显提高输入框背景亮度
         container.BorderSizePixel = 0
         container.Parent = mainFrame
         
-        -- 输入框渐变背景
+        -- 输入框渐变背景 - 提高亮度
         local inputGradient = Instance.new("UIGradient")
         inputGradient.Color = ColorSequence.new({
-            ColorSequenceKeypoint.new(0, Color3.fromRGB(65, 65, 85)),
-            ColorSequenceKeypoint.new(1, Color3.fromRGB(50, 50, 65))
+            ColorSequenceKeypoint.new(0, Color3.fromRGB(75, 75, 90)),  -- 提高顶部亮度
+            ColorSequenceKeypoint.new(1, Color3.fromRGB(60, 60, 75))   -- 提高底部亮度
         })
         inputGradient.Parent = container
         
@@ -476,4 +476,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("🎵 音乐播放器UI已加载 - 颜色对比度与渐变效果优化完成！")
+print("🎵 音乐播放器UI已加载 - 背景亮度优化完成！")
